# noise-project-bodensee

./: .env.example  .gitignore  .gitlab-ci.yml  README.md  pyproject.toml
analysis/: Base Analysis.ipynb  Test Analysis.ipynb  pipeline_download.py
evaluation_data/base_image/: Dockerfile
evaluation_data/cal-com/: Dockerfile  test.sh
evaluation_data/dev-roadmap/: Dockerfile  test.sh
evaluation_data/docs/: Dockerfile  test.sh
evaluation_data/floating-ui/: Dockerfile  test.sh
evaluation_data/gatsby/: Dockerfile  test.sh
evaluation_data/insomnia/: Dockerfile  test.sh
evaluation_data/ionic-framework/: Dockerfile  test.sh
evaluation_data/lenster/: Dockerfile  SendRequest.py  playwright.config.ts  test.sh
evaluation_data/logseq/: Dockerfile  test.sh
evaluation_data/material-ui/: Dockerfile  test.sh
evaluation_data/playwright/: Dockerfile  test.sh
evaluation_data/quill/: Dockerfile  test.sh
evaluation_data/redwood/: Dockerfile  test.sh
evaluation_data/remix/: Dockerfile  test.sh
evaluation_data/rocket-chat/: Dockerfile  test.sh
evaluation_data/shiki/: Dockerfile  test.sh
evaluation_data/storybook/: Dockerfile  test.sh
evaluation_data/theia/: Dockerfile  test.sh
noiseTool/: main.py
noiseTool/modules/: ConstantRequestModule.py  DummyNoise.py  Module.py  NetworkControl.py  StessNGModule.py
tests/: test_module.py  test_utils.py
