[tool.poetry]
name = "noise-tool"
version = "0.1.9"
description = ""
readme = "README.md"
authors = [
    "Max Mustermann <max.mustermann@tum.de>",
]
packages = [
    { include = "noiseTool" }
]

[tool.poetry.scripts]
noise-tool = "noiseTool.main:app"

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.7.0"
tcconfig = "^0.28.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
coverage = "^7.2.3"
pdoc = "^13.1.1"
flake8 = "^6.0.0"
flake8-formatter-junit-xml = "^0.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
